--- a/styles.css
+++ b/styles.css
@@ -6,5 +6,15 @@ body {
     background-color: #F6F6F6;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
+}
+
+#cal-container {
+    background-color: #AAAAAA;
+    display: flex;
+    flex-direction: container;
+    width: 356px;
+    height: 520px;
+    border: 2px solid #000000;
+    border-radius: 20px;
 }
