--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ body {
     padding: 20px;
     border: 2px solid #333333;
     border-radius: 15px;
+    gap: 18px;
 }
 
 #cal-container #display {
@@ -43,4 +44,27 @@ body {
 #cal-container #display #current-operand {
     font-size: 45px;
     font-weight: 500;   
+}
+
+#cal-container #control {
+    display: flex;
+    gap: 10px;
+    width: 100%;
+}
+
+#cal-container #control button {
+    width: 100%;
+    height: 68px;
+    border: 2px solid #333333;
+    border-radius: 5px;
+    font-size: 20px;
+    color: #333333;
+}
+
+#cal-container #control #clear-btn {
+    background-color: #FFAAAA;
+}
+
+#cal-container #control #delete-btn {
+    background-color: #AAAAFF;
 }
